--- a/packages/piece-zaizai/index.html
+++ b/packages/piece-zaizai/index.html
@@ -5,6 +5,15 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
+  
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fff" />
+  <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#17171a" />
+  <meta name="referrer" content="never" />
+  <link rel="apple-touch-icon" href="/favicon.ico" />
+  
   <link rel="stylesheet" href="loading.css">
   <title>PIECE-ZAIZAI</title>
 </head>
