--- a/packages/bun-server/public/index.html
+++ b/packages/bun-server/public/index.html
@@ -10,5 +10,88 @@
   </head>
   <body>
     <h1>bun server</h1>
+
+    <p id="text">asdhl</p>
+    <video
+      width="500"
+      height="500"
+      autoplay
+      playsinline
+    ></video>
   </body>
+  <script>
+    const video = document.querySelector('video')
+    const socket = new WebSocket('ws://localhost:7379')
+    const peerConnection = new RTCPeerConnection({
+      iceServers: [
+        {
+          urls: 'stun:stun.l.google.com:19302',
+        },
+      ],
+    })
+    let stream
+
+    async function offerSend(offer) {
+      await peerConnection.setRemoteDescription(offer) // 设置A的SDP
+      const answer = await peerConnection.createAnswer()
+      await peerConnection.setLocalDescription(answer)
+      socket.send(
+        JSON.stringify({
+          route: 'answer',
+          data: answer,
+        })
+      )
+    }
+
+    peerConnection.ontrack = track => {
+      console.log('触发 track')
+
+      if (track.track.kind === 'video') {
+        video.srcObject = track.streams[0]
+        // video.autoplay = true
+        // video.style.setProperty('aspect-ratio', '16 / 9')
+        // video.setAttribute('id', track.track.id)
+      }
+      if (track.track.kind === 'audio') {
+        const audio = document.createElement('audio')
+        audio.srcObject = track.streams[0]
+        audio.autoplay = true
+        audio.setAttribute('id', track.track.id)
+        document.body.appendChild(audio)
+      }
+    }
+
+    // 接受到ICE-candidate后会设置 addIceCandidate ，然后会触发 onicecandidate
+    peerConnection.onicecandidate = candidateInfo => {
+      if (candidateInfo.candidate) {
+        let json = {
+          route: 'server-ICE-candidate',
+          data: candidateInfo.candidate,
+        }
+        socket.send(JSON.stringify(json))
+      }
+    }
+
+    async function setCandidate(data) {
+      await peerConnection.addIceCandidate(data)
+    }
+
+    socket.onopen = () => {
+      socket.send('client')
+    }
+
+    socket.onmessage = message => {
+      let data
+      try {
+        data = JSON.parse(message.data)
+      } catch (error) {
+        data = message
+      }
+      if (data.code === 'offer') {
+        offerSend(data.data)
+      } else if (data.code === 'ICE-candidate') {
+        setCandidate(data.data)
+      }
+    }
+  </script>
 </html>
