主要更新ssh上传，其他修改 bug，demo

--- a/packages/vitepress-md-renderer-web/index.html
+++ b/packages/vitepress-md-renderer-web/index.html
@@ -15,7 +15,7 @@
 				document.documentElement.classList.add(item.textContent)
 			})
 		})
-		document.documentElement.classList.add('vitepress-dark')
+		// document.documentElement.classList.add('vitepress-dark')
 	</script>
 	<div id="app"></div>
 </body>
